datasets/dataset_txt/scrapy/scrapy_245.txt
Naba7 commented on Dec 13, 2018
scrapy startproject stack
File "", line 1
scrapy startproject stack
^
SyntaxError: invalid syntax